Fix Logo Alignment

--- a/CanBakersExtCss.css
+++ b/CanBakersExtCss.css
@@ -5,13 +5,11 @@ body{
 	display: grid;
 }
 .logoGridCenter{
-	grid-row: 1/2; 
-	grid-column: 1/5; 
+	grid-column: 3/5; 
 	text-align:center;
 }
 .topSectionRightSocialMedia{
-	grid-row: 1/2; 
-	grid-column: 3/5; 
+	grid-column: 5/5; 
 	text-align:right;
 	padding-right:20px;
 	
